alignment fixed on weddings/corporate

--- a/corporate.css
+++ b/corporate.css
@@ -75,10 +75,10 @@ h3 {
   margin: 15px;
 }
 .thumbnail {
-  width: 100%;
+  width: 90%;
 }
 #spacer {
-  height: 130px;
+  height: 110px;
 }
 p {
   font-family: 'merienda';
